Shruthi | Adding web endpoint to generate identifier