@@ -16,6 +16,8 @@
 
     <properties>
         <openmrsCoreVersion>1.9.4</openmrsCoreVersion>
+        <webservicesRestModuleVersion>2.4-SNAPSHOT</webservicesRestModuleVersion>
+        <idGenVersion>2.6</idGenVersion>
     </properties>
     
     <dependencies>
@@ -35,6 +37,24 @@
             <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
         </repository>
     </repositories>
+    
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
+                        <includes>
+                            <include>**/*Test.java</include>
+                        </includes>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
     <pluginRepositories>
         <pluginRepository>
